# pier-rest-client

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release-macos.yml  release-windows.yml
src/: app.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: http.rs  storage.rs
src-tauri/src/models/: collection.rs  environment.rs  mod.rs  request.rs
src/components/layout/: titlebar.tsx
src/components/ui/: badge.tsx  button.tsx  code-editor.tsx  input.tsx  select.tsx  tooltip.tsx
src/features/collections/: collection-store.ts  new-request-tab.ts  rename-tab-persist.ts  save-request.ts  saved-requests-store.ts
src/features/command-palette/: command-palette.tsx
src/features/environments/: env-manager.tsx  env-selector.tsx  env-store.ts
src/features/history/: history-panel.tsx  history-store.ts
src/features/import-export/: curl-import-modal.tsx  curl-import.ts  import-export-store.ts  workspace-backup.ts
src/features/request-builder/: auth-editor.tsx  key-value-editor.tsx  request-builder.tsx
src/features/response-viewer/: response-viewer.tsx
src/features/sidebar/: collection-tree.tsx  sidebar.tsx
src/features/tabs/: tab-bar.tsx
src/lib/: json-highlight.ts  keybindings.ts  tauri.ts  types.ts  utils.ts  variable-resolver.ts
src/store/: app-store.ts
src/styles/: globals.css
