[package]
name = "pier-api-client"
version = "1.0.0"
description = "A local-first, privacy-first, ultra-fast REST API client"
authors = ["Pier Contributors"]
license = "MIT"
repository = "https://github.com/asimkaya/pier-rest-client"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tauri-plugin-dialog = "2.7.0"
